@@ -1883,6 +1883,7 @@ bool VM::isR6RSMode() const
 {
     return isR6RSMode_;
 }
+
 #include "Builtin.h"
 void VM::activateR6RSMode()
 {
