@@ -1,8 +1,6 @@
-(import (rnrs)
-        (srfi :8))
+(import (rnrs))
 
-(display (receive (a b . c) (values 1 2 3 4 5)
-         (apply + a b c)))
-(display "hige")
+(display (let-values (((a b) (values 1)))
+         (+ a b)))
 
 
