@@ -1,5 +1,7 @@
 2008-10-14  higepon  <higepon@users.sourceforge.jp>
 
+        * main.cpp (main): Added debug-expand mode which shows me the result of psyntax expansion.
+
         * Makefile.am (test): Added library-load path functions.
 
         * lib/srfi/%3A8.ss: Added srfi-8 support for R6RS.
